--- a/app/src/main/res/layout/activity_item_card.xml
+++ b/app/src/main/res/layout/activity_item_card.xml
@@ -28,14 +28,14 @@
             android:textSize="34sp" />
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/imgEditar"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
             app:srcCompat="@drawable/ic_editar" />
 
         <ImageView
-            android:id="@+id/imageView3"
+            android:id="@+id/imgBorrar"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
